--- a/CSManagement/CSManagement/Views/Shared/_Layout.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Layout.cshtml
@@ -23,9 +23,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/9738106a36.js" crossorigin="anonymous"></script>
     <style>
-        *{
+        * {
             font-family: 'Kanit', sans-serif;
         }
+
         .take-all-space-you-can {
             width: 50%;
         }
@@ -34,7 +35,7 @@
             text-align: center;
         }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
@@ -43,26 +44,31 @@
 
         <div class="modal fade" id="modalLRForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog cascading-modal" role="document">
-                <div class="modal-content">
+
+                <div class="modal-content modal-md">
+                    <div class="modal-header modal-md text-center" style="background-color:cornflowerblue;">
+                        @*<img src="~/img/cs1.png" height="100" width="150" />*@
+                        <a style="font-size:25px;color:white">ระบบจัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</a>
+                    </div>
                     <div class="modal-c-tabs">
                         <ul class="nav nav-tabs md-tabs light-blue darken-3" role="tablist">
                             <li class="nav-item take-all-space-you-can set-text">
-                                <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab">
+                                <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab" style="font-size:20px">
                                     <i class="fas fa-user"></i>
-                                    Login
+                                    เข้าสู่ระบบ
                                 </a>
                             </li>
                             <li class="nav-item take-all-space-you-can set-text">
-                                <a class="nav-link" data-toggle="tab" href="#panel8" role="tab">
+                                <a class="nav-link" data-toggle="tab" href="#panel8" role="tab" style="font-size:20px">
                                     <i class="fas fa-user-plus"></i>
-                                    Register
+                                    สมัครสมาชิก
                                 </a>
                             </li>
                         </ul>
 
                         <div class="tab-content">
                             <div class="tab-pane fade in active" id="panel7" role="tabpanel">
-                                <div class="modal-body">
+                                <div class="modal-body modal-md">
                                     <form id="FormLogin">
                                         @Html.AntiForgeryToken()
                                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -73,7 +79,7 @@
                                                 <div class="input-group-addon">
                                                     <span class="fas fa-id-card"></span>
                                                 </div>
-                                                @Html.Editor("username", new { htmlAttributes = new { @class = "form-control", AutoComplete = "off", placeholder = "กรุณาใส่รหัสนักศึกษา" } })
+                                                @Html.Editor("username", new { htmlAttributes = new { @class = "form-control  input-lg", AutoComplete = "off", placeholder = "กรุณาใส่รหัสนักศึกษา" } })
                                             </div>
                                             @Html.ValidationMessage("username", "", new { @class = "text-danger", id = "usernameCK1" })
                                         </div>
@@ -81,23 +87,20 @@
                                         @*@Html.Label("password", "รหัสผ่าน", new { @class = "control-label col-md-6" })*@
                                         <div class="form-group ">
                                             <div class="input-group">
-                                                <div class="input-group-addon">
+                                                <div class="input-group-addon" style="font-size:15px">
                                                     <span class="fas fa-lock"></span>
                                                 </div>
-                                                @Html.Editor("password", new { htmlAttributes = new { @class = "form-control", @Type = "password", placeholder = "กรุณาใส่รหัสผ่าน" } })
+                                                @Html.Editor("password", new { htmlAttributes = new { @class = "form-control input-lg", @Type = "password", placeholder = "กรุณาใส่รหัสผ่าน" } })
                                             </div>
                                             @Html.ValidationMessage("password", "", new { @class = "text-danger", id = "passwordCK1" })
                                         </div>
 
                                         <div class="form-group">
-                                            <div class="text-center form-sm">
-                                                <input type="submit" value="เข้าสู่ระบบ" class="btn btn-success" />
+                                            <div class="text-center">
+                                                <button type="submit"class="btn btn-success input-lg" style="font-size:20px">เข้าสู่ระบบ</button>
                                             </div>
                                         </div>
                                     </form>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-outline-info waves-effect ml-auto" data-dismiss="modal">Close</button>
-                                    </div>
                                 </div>
                             </div>
 
@@ -105,14 +108,14 @@
                                 <form id="FormRegister">
                                     @Html.AntiForgeryToken()
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                    <div class="modal-body">
+                                    <div class="modal-body modal-md">
 
                                         <div class="form-group ">
                                             <div class="input-group">
                                                 <div class="input-group-addon">
                                                     <span class="fas fa-id-card"></span>
                                                 </div>
-                                                @Html.Editor("username2", new { htmlAttributes = new { @class = "form-control", AutoComplete = "off", placeholder = "กรุณาใส่รหัสนักศึกษา" } })
+                                                @Html.Editor("username2", new { htmlAttributes = new { @class = "form-control input-lg", AutoComplete = "off", placeholder = "กรุณาใส่รหัสนักศึกษา" } })
                                             </div>
                                             @Html.ValidationMessage("username", "", new { @class = "text-danger", id = "usernameCK2" })
                                         </div>
@@ -122,7 +125,7 @@
                                                 <div class="input-group-addon">
                                                     <span class="fas fa-lock"></span>
                                                 </div>
-                                                @Html.Editor("password2", new { htmlAttributes = new { @class = "form-control", @Type = "password", placeholder = "กรุณาใส่รหัสผ่าน" } })
+                                                @Html.Editor("password2", new { htmlAttributes = new { @class = "form-control input-lg", @Type = "password", placeholder = "กรุณาใส่รหัสผ่าน" } })
                                             </div>
                                             @Html.ValidationMessage("password", "", new { @class = "text-danger", id = "passwordCK2" })
                                         </div>
@@ -132,7 +135,7 @@
                                                 <div class="input-group-addon">
                                                     <span class="fas fa-lock"></span>
                                                 </div>
-                                                @Html.Editor("repassword2", new { htmlAttributes = new { @class = "form-control", @Type = "password", placeholder = "กรุณาใส่รหัสผ่านอีกครั้ง" } })
+                                                @Html.Editor("repassword2", new { htmlAttributes = new { @class = "form-control  input-lg", @Type = "password", placeholder = "กรุณาใส่รหัสผ่านอีกครั้ง" } })
                                             </div>
                                             @Html.ValidationMessage("repassword", "", new { @class = "text-danger", id = "repasswordCK2" })
                                         </div>
@@ -142,19 +145,16 @@
                                                 <div class="input-group-addon">
                                                     <span class="fas fa-user-slash"></span>
                                                 </div>
-                                                @Html.Editor("specailcode", new { htmlAttributes = new { @class = "form-control", @Type = "password", placeholder = "รหัสพิเศษ(ไม่มีไม่ต้องใส่)" } })
+                                                @Html.Editor("specailcode", new { htmlAttributes = new { @class = "form-control  input-lg", @Type = "password", placeholder = "รหัสพิเศษ(ไม่มีไม่ต้องใส่)" } })
                                             </div>
                                             @Html.ValidationMessage("specailcode", "", new { @class = "text-danger", id = "specialcodeCK2" })
                                         </div>
 
-                                        <div class="text-center form-sm">
-                                            <button class="btn btn-info">สมัครใช้งาน</button>
+                                        <div class="text-center">
+                                            <button type="submit" class="btn btn-info input-lg" style="font-size:20px">สมัครสมาชิก</button>
                                         </div>
                                     </div>
                                 </form>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-outline-info waves-effect" data-dismiss="modal">Close</button>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
         </div>
 
         <div class="content-wrapper">
-            
+
             <section class="content">
                 @RenderBody()
             </section>
