--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -21,6 +21,9 @@
         <li class="@Url.IsLinkActive("Index", "Students")">
             <a href="@Url.Action("Index", "Students")"><i class="fa fa-user"></i> <span>ข้อมูลนักศึกษา</span></a>
         </li>
+        <li class="@Url.IsLinkActive("Index", "Teachers")">
+            <a href="@Url.Action("Index", "Teachers")"><i class="fa fa-user"></i> <span>ข้อมูลอาจารย์</span></a>
+        </li>
         <li>
             <a href="#"><i class="fa fa-graduation-cap"></i> <span>ข้อมูลปริญญานิพนธ์</span></a>
         </li>
@@ -28,7 +31,7 @@
             <a href="#"><i class="fa fa-bullhorn"></i> <span>ข้อมูลประชาสัมพันธ์</span></a>
         </li>
         <li class="@Url.IsLinkActive("Index", "ComputerEquipments")">
-            <a href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-user"></i> <span>ข้อมูลครุภัณฑ์</span></a>
+            <a href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-cube"></i> <span>ข้อมูลครุภัณฑ์</span></a>
         </li>
         <li class="treeview">
             <a href="#">
