--- a/CSManagement/CSManagement/Views/Students/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Index.cshtml
@@ -59,7 +59,18 @@
 
     <script>
         $(document).ready(function () {
-            $('#example1').DataTable();
+            $('#example1').DataTable({
+                scrollCollapse: true,
+                autoWidth: false,
+                responsive: true,
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                },
+                columnDefs: [{
+                    targets: "datatable-nosort",
+                    orderable: false
+                }]
+            });
         });
     </script>
 }
