--- a/CSManagement/CSManagement/Views/ComputerEquipments/Details.cshtml
+++ b/CSManagement/CSManagement/Views/ComputerEquipments/Details.cshtml
@@ -5,95 +5,74 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">รายละเอียดข้อมูลครุภัณฑ์</h1>
+                    <div style="float:right">
+                        <a class="btn btn-warning" href="@Url.Action("Edit", "ComputerEquipments", new { id = Model.CE_ATNO })"><i class="fa fa-edit"></i> แก้ไขข้อมูล</a>
+                        <a class="btn btn-danger" href="@Url.Action("Dispose", "Disposes", new { id = Model.CE_ATNO })"><i class="fa  fa-user-times"></i> จำหน่ายครุภัณฑ์</a>
+                    </div>
+                </div>
+            </div>
 
-<div>
-    <h4>ComputerEquipment</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_NO)
-        </dt>
+        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.CE_NO)
-        </dd>
+        <table id="w0" class="table table-striped table-bordered detail-view" style="font-size:20px">
+            <tbody>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_NO)</th>
+                    <td>@Html.DisplayFor(model => model.CE_NO)</td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_DateIN)
-        </dt>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_DateIN)</th>
+                    <td>@Html.DisplayFor(model => model.CE_DateIN)</td>
+                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.CE_DateIN)
-        </dd>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_Name)</th>
+                    <td>@Html.DisplayFor(model => model.CE_Name)</td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_Name)
-        </dt>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_Noce)</th>
+                    <td>@Html.DisplayFor(model => model.CE_Noce)</td>
+                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.CE_Name)
-        </dd>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_Piece)</th>
+                    <td>@Html.DisplayFor(model => model.CE_Piece)</td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_Noce)
-        </dt>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_Price)</th>
+                    <td>@Html.DisplayFor(model => model.CE_Price)</td>
+                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.CE_Noce)
-        </dd>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_PriceTotal)</th>
+                    <td>@Html.DisplayFor(model => model.CE_PriceTotal)</td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_Piece)
-        </dt>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_Budget)</th>
+                    <td>@Html.DisplayFor(model => model.CE_Budget)</td>
+                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.CE_Piece)
-        </dd>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CE_Status)</th>
+                    <td>@Html.DisplayFor(model => model.CE_Status)</td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_Price)
-        </dt>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Teacher.Tea_Name)</th>
+                    <td>@Html.DisplayFor(model => model.Teacher.Tea_Name)</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
 
-        <dd>
-            @Html.DisplayFor(model => model.CE_Price)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_PriceTotal)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CE_PriceTotal)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_Budget)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CE_Budget)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CE_Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CE_Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Teacher.Tea_Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Teacher.Tea_Name)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CE_ATNO }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
