--- a/CSManagement/CSManagement/Views/Students/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Edit.cshtml
@@ -5,9 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -15,7 +12,7 @@
     <section class="content">
         <div class="box box-default">
             <div class="box-header with-border">
-                <h3 class="box-title">เพิ่มข้อมูลนักศึกษา</h3>
+                <h3 class="box-title">แก้ไขข้อมูลนักศึกษา</h3>
 
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
@@ -27,7 +24,7 @@
                 <div class="row">
                     <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_ID, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Stu_ID, new { htmlAttributes = new { @class = "form-control",@ReadOnly = true } })
+                        @Html.EditorFor(model => model.Stu_ID, new { htmlAttributes = new { @class = "form-control", @ReadOnly = true } })
                         @Html.ValidationMessageFor(model => model.Stu_ID, "", new { @class = "text-danger" })
                     </div>
 
@@ -109,7 +106,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_School, htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-university"></i></span>
@@ -118,7 +115,7 @@
                         @Html.ValidationMessageFor(model => model.Stu_School, "", new { @class = "text-danger" })
                     </div>
 
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_OldEdu, htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-graduation-cap"></i></span>
@@ -133,12 +130,30 @@
                         @Html.ValidationMessageFor(model => model.Stu_OldEdu, "", new { @class = "text-danger" })
                     </div>
 
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
+                        @Html.LabelFor(model => model.Stu_StatusID, htmlAttributes: new { @class = "control-label" })
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-mortar-board"></i></span>
+                            @Html.DropDownListFor(model => model.Stu_StatusID, new List<SelectListItem>()
+                            {
+                                new SelectListItem() { Text = "กำลังศึกษาอยู่", Value = "1" },
+                                new SelectListItem() { Text = "สำเร็จการศึกษา", Value = "2" },
+                                new SelectListItem() { Text = "เกียรตินิยมอันดับ 1", Value = "3" },
+                                new SelectListItem() { Text = "เกียรตินิยมอันดับ 2", Value = "4"} ,
+                                new SelectListItem() { Text = "พ้นสภาพการเป็นนักศึกษา", Value = "5"},
+                                new SelectListItem() { Text = "พักการเรียน", Value = "6"}
+                            }, "เลือกวุฒิการศึกษา", new { @id = "Stu_OldEdu", @class = "form-control" })
+                        </div>
+                        @Html.ValidationMessageFor(model => model.Stu_OldEdu, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_Img, htmlAttributes: new { @class = "control-label" })
                         <input type="file" id="file" name="file">
                     </div>
                 </div>
-                <button type="submit" class="btn btn-block btn-success col-md-4">บันทึกข้อมูล</button>
+                <button type="submit" class="btn btn-success col-md-3" style="float:right"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
+                <a class="btn btn-default col-md-3" style="float:left" href="@Url.Action("Index", "Students")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
+
             </div>
         </div>
 
