--- a/CSManagement/CSManagement/Views/Teachers/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Details.cshtml
@@ -5,87 +5,65 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">รายละเอียดข้อมูลอาจารย์</h1>
+                    <div style="float:right">
+                        <a class="btn btn-warning" href="@Url.Action("Edit", "Teachers", new { id = Model.Tea_ID })"><i class="fa fa-edit"></i>แก้ไขข้อมูล</a>
+                        <a class="btn btn-danger" href="@Url.Action("Delete", "Teacher", new { id = Model.Tea_ID })"><i class="fa  fa-user-times"></i> ลบข้อมูล</a>
+                    </div>
+                </div>
+            </div>
 
-<div>
-    <h4>Teacher</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Tea_Name)
-        </dt>
+        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tea_Name)
-        </dd>
+        <table id="w0" class="table table-striped table-bordered detail-view" style="font-size:20px">
+            <tbody>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Tea_Img)</th>
+                    <td class="text-center" style="padding:10px 10px 10px 10px"><img src="~/img/@Model.Tea_Img" height="100" width="100" alt="Alternate Text" /></td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Tea_Surname)
-        </dt>
+                <tr>
+                    <th>รหัสประจำตัว</th>
+                    <td>@Html.DisplayFor(model => model.Tea_ID)</td>
+                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tea_Surname)
-        </dd>
+                <tr>
+                    <th>ชื่อ-นามสกุล</th>
+                    <td>@Model.Title.Title_Name @Model.Tea_Name @Model.Tea_Surname</td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Tea_Birth)
-        </dt>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Tea_Birth)</th>
+                    <td>@Html.DisplayFor(model => model.Tea_Birth)</td>
+                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tea_Birth)
-        </dd>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Tea_LvEdu)</th>
+                    <td>@Html.DisplayFor(model => model.Tea_LvEdu)</td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Tea_Img)
-        </dt>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Tea_Export)</th>
+                    <td>@Html.DisplayFor(model => model.Tea_Export)</td>
+                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tea_Img)
-        </dd>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Tea_Program)</th>
+                    <td>@Html.DisplayFor(model => model.Tea_Program)</td>
+                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Tea_Export)
-        </dt>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Tea_Position)</th>
+                    <td>@Html.DisplayFor(model => model.Tea_Position)</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+    
 
-        <dd>
-            @Html.DisplayFor(model => model.Tea_Export)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Tea_LvEdu)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tea_LvEdu)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Tea_Program)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tea_Program)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Tea_Position)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tea_Position)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Title.Title_Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title.Title_Name)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Tea_ID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
