--- a/CSManagement/CSManagement/Views/Teachers/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Index.cshtml
@@ -1,82 +1,49 @@
 ﻿@model IEnumerable<CSManagement.Models.Teacher>
 
 @{
-    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
 }
 
-<h2>Index</h2>
+<div class="box">
+    <div class="box-header">
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <h1 class="box-title">จัดการข้อมูลอาจารย์</h1>
+                <a class="btn btn-success" style="float: right" href="@Url.Action("Create", "Teachers")"><i class="fa fa-user-plus"></i> เพิ่มข้อมูลอาจารย์</a>
+            </div>
+        </div>
+    </div>
+    <div class="box-body">
+        <table id="example1" class="table table-bordered table-striped" style="width:100%">
+            <thead>
+                <tr>
+                    <th style="text-align:center">ที่</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_ID)</th>
+                    <th style="text-align:center">ชื่อ-นามสกุล</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Export)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Position)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Img)</th>
+                    <th style="text-align:center">จัดการข้อมูล</th>
+                </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Tea_Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tea_Surname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tea_Birth)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tea_Img)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tea_Export)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tea_LvEdu)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tea_Program)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tea_Position)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title.Title_Name)
-        </th>
-        <th></th>
-    </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td style="text-align:center">@(i++)</td>
+                        <td style="text-align:center">@Html.DisplayFor(modelItem => item.Tea_ID)</td>
+                        <td>@item.Title.Title_Name @item.Tea_Name @item.Tea_Surname</td>
+                        <td>@Html.DisplayFor(modelItem => item.Tea_Export)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Tea_Position)</td>
+                        <td class="text-center" style="padding:10px 10px 10px 10px"><img src="~/img/@item.Tea_Img" height="70" width="70" alt="Alternate Text" /></td>
+                        <td class="text-center">
+                            <a class="btn btn-warning" href="@Url.Action("Edit", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-edit"></i> แก้ไข</a>
+                            <a class="btn btn-info" href="@Url.Action("Details", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                            <a class="btn btn-danger" href="@Url.Action("Delete", "Teachers", new { id = item.Tea_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                        </td>
+                    </tr>
+                }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tea_Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tea_Surname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tea_Birth)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tea_Img)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tea_Export)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tea_LvEdu)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tea_Program)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tea_Position)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title.Title_Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Tea_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Tea_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Tea_ID })
-        </td>
-    </tr>
-}
-
-</table>
+        </table>
+    </div>
+</div>
